Flexlay 0.0.2
=============
 - switched build system from autohell to SCons
 - switching scripting language to Python

Flexlay 0.0.1
==============
 - first release
 - zoom support
 - multilayer tilemap support
 - tilemap to png converting
 - tile brushes
 - simple copy/paste
 - undo/redo
 - game object support
 - SuperTux support
 - netPanzer support
 - Windstille support
 - Pingus support (load only)

# EOF #