@@ -2,6 +2,11 @@ Flexlay 0.0.2
 =============
  - switched build system from autohell to SCons
  - switching scripting language to Python
+ - restructured the scripting bindings
+ - C++ object hierachy now completly available in scripting
+ - major GUI cleanup
+ - a toolbar
+ - splitted flexlay into a C++ library and a python module
 
 Flexlay 0.0.1
 ==============
